# pico-examples

./: CMakeLists.txt
GJS/: CMakeLists.txt
GJS/A/: A.c  CMakeLists.txt
GJS/Axis/: Axis.c  CMakeLists.txt
multicore/hello_multicore/: multicore.c
multicore/multicore_fifo_irqs/: multicore_fifo_irqs.c
multicore/multicore_runner/: multicore_runner.c
multicore/multicore_runner_queue/: multicore_runner_queue.c
